--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>demo</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>dms</groupId>
+    <artifactId>dms</artifactId>
     <packaging>war</packaging>
     <version>1.0</version>
     <url>http://maven.apache.org</url>
