--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -52,6 +52,6 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>work/login.html</welcome-file>
+        <welcome-file>dms/index.html</welcome-file>
     </welcome-file-list>
 </web-app>
