add filter for project commission module

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:sqlserver://localhost:1433;databaseName=work
+jdbc.url=jdbc:sqlserver://localhost:1433;databaseName=dms
 jdbc.username=sa
 jdbc.password=123123
