--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <resteasy-version>3.1.2.Final</resteasy-version>
         <resteasy-jaxrs-api-version>3.0.12.Final</resteasy-jaxrs-api-version>
         <quartz-version>2.3.0</quartz-version>
+        <poi-version>3.16</poi-version>
     </properties>
 
     <build>
@@ -329,6 +330,12 @@
             <version>${quartz-version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi-version}</version>
+        </dependency>
 
     </dependencies>
 
