--- a/pom.xml
+++ b/pom.xml
@@ -337,6 +337,14 @@
             <version>${poi-version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
