--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <resteasy-jaxrs-api-version>3.0.12.Final</resteasy-jaxrs-api-version>
         <quartz-version>2.3.0</quartz-version>
         <poi-version>3.16</poi-version>
+        <commons-codec-version>1.10</commons-codec-version>
     </properties>
 
     <build>
@@ -344,11 +345,19 @@
             <artifactId>poi-ooxml</artifactId>
             <version>${poi-version}</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec-version}</version>
         </dependency>
 
 
